--- a/style/style.css
+++ b/style/style.css
@@ -71,3 +71,10 @@
 .rating-green {
     color: green;
 }
+.contacts {
+    font-size: 20px;
+    line-height: 28px;
+    color: blue;
+    font-weight: bold;
+    text-decoration: none;
+}
